Completed 11. Add more styles to the section tagline task

--- a/0x02-CSS_advanced/styles/10-style.css
+++ b/0x02-CSS_advanced/styles/10-style.css
@@ -25,6 +25,8 @@
   --line-height-big: 1.8;
 
   --section-header-align: center;
+
+  --section-tagline-transform: uppercase;
 }
 
 html {
@@ -63,7 +65,12 @@ a {
   text-align: var(--section-header-align);
 }
 
-.card-category,
+.card-category {
+  color: var(--color-primary);
+}
 .section-tagline {
   color: var(--color-primary);
+  font-family: var(--font-family-title);
+  text-transform: var(--section-tagline-transform);
+  font-weight: var(--font-weight-bold);
 }
