--- a/0x02-CSS_advanced/styles/10-style.css
+++ b/0x02-CSS_advanced/styles/10-style.css
@@ -25,8 +25,6 @@
   --line-height-big: 1.8;
 
   --section-header-align: center;
-
-  --section-tagline-transform: uppercase;
 }
 
 html {
@@ -65,12 +63,7 @@ a {
   text-align: var(--section-header-align);
 }
 
-.card-category {
-  color: var(--color-primary);
-}
+.card-category,
 .section-tagline {
   color: var(--color-primary);
-  font-family: var(--font-family-title);
-  text-transform: var(--section-tagline-transform);
-  font-weight: var(--font-weight-bold);
 }
