Completed 15. Add universal box-sizing task

--- a/0x02-CSS_advanced/styles/15-style.css
+++ b/0x02-CSS_advanced/styles/15-style.css
@@ -184,6 +184,10 @@ template {
   --section-title-color: var(--color-black);
 }
 
+* {
+  box-sizing: border-box;
+}
+
 html {
   scroll-behavior: smooth;
   font-size: 62.5%;
