--- a/0x02-CSS_advanced/styles/17-style.css
+++ b/0x02-CSS_advanced/styles/17-style.css
@@ -257,6 +257,7 @@ a:active {
 
 .section-footer {
   padding: var(--section-footer-padding);
+  text-align: var(--section-footer-align);
 }
 
 .section-title {
